cambio de index2

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -13,6 +13,8 @@
         <script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
         
+        <link rel="stylesheet" href="css/stylenav.css">
+        
        <!-- <script>$( function(){$( "#draggable" ).draggable();});</script>-->
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -43,6 +45,15 @@
 		</script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm21zoiREk_KsuLNeJ9VGTcUJgwL4DV3E&callback=myMap"></script>
 		-->
+      <div class="navToggle"><div class="icon"></div></div>
+        <div id="menu"><ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Work</li>
+          <li><a href="/logout" >logout</a></li>
+          </ul>
+      </div>		
+
 		 <div id="draggable" class="ui-widget-content">
              <h1>{{{nombre}}} {{{apellido}}}</h1>
         </div>
@@ -179,6 +190,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script  src="js/indexnav.js"></script>
         
   
         
