--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,74 +7,84 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/stylenav.css">
   </head>
   <body>
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Signin" data-whatever="@mdo">Sign In</button>
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Signup" data-whatever="@fat">Sign Up</button>
+    <div id="container">
+      <div class="navToggle"><div class="icon"></div></div>
+        <div id="menu"><ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Work</li>
+          <li>Contact</li>
+          </ul>
+      </div>
     
-    <div class="modal fade" id="Signin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Sign In</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form method="POST" action="/usuario/login">
-              <div class="form-group">
-                <label for="recipient-name" class="form-control-label">UserName:</label>
-                <input type="text" class="form-control" id="recipient-name" name="username">
-              </div>
-              <div class="form-group">
-                <label for="message-text" class="form-control-label">Password:</label>
-                <input type="text" class="form-control" id="recipient-name" name="password">
-              </div>
-              <input type="submit" value="Submit" class="btn btn-default">
-            </form>
+      <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#Signin" data-whatever="@mdo">Sign In</button>
+      <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#Signup" data-whatever="@fat">Sign Up</button>
+      
+      <!--Login-->
+      <div class="modal fade" id="Signin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Sign In</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form method="POST" action="/usuario/login">
+                <div class="form-group">
+                  <label for="recipient-name" class="form-control-label">UserName:</label>
+                  <input type="text" class="form-control" id="recipient-name" name="username">
+                </div>
+                <div class="form-group">
+                  <label for="message-text" class="form-control-label">Password:</label>
+                  <input type="password" class="form-control" id="recipient-name" name="password">
+                </div>
+                <input type="submit" value="Submit" class="btn btn-outline-dark">
+              </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    
-    
-    
-    
-    
-    <div class="modal fade" id="Signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Sign Up</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form method="POST" action="/usuario/registro">
-              <div class="form-group">
-                <label for="recipient-name" class="form-control-label">UserName:</label>
-                <input type="text" class="form-control" id="recipient-name" name="username">
-              </div>
-              <div class="form-group">
-                <label for="message-text" class="form-control-label">Password:</label>
-                <input type="text" class="form-control" id="recipient-name" name="password">
-              </div>
-              <div class="form-group">
-                <label for="message-text" class="form-control-label">Name:</label>
-                <input type="text" class="form-control" id="recipient-name" name="nombre">
-              </div>     
-              <div class="form-group">
-                <label for="message-text" class="form-control-label">LastName:</label>
-                <input type="text" class="form-control" id="recipient-name" name="apellido">
-              </div>  
-              <input type="submit" value="Submit" class="btn btn-default">
-            </form>
-          
+      <!--Registro-->
+      <div class="modal fade" id="Signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Sign Up</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form method="POST" action="/usuario/registro">
+                <div class="form-group">
+                  <label for="recipient-name" class="form-control-label">UserName:</label>
+                  <input type="text" class="form-control" id="recipient-name" name="username">
+                </div>
+                <div class="form-group">
+                  <label for="message-text" class="form-control-label">Password:</label>
+                  <input type="password" class="form-control" id="recipient-name" name="password">
+                </div>
+                <div class="form-group">
+                  <label for="message-text" class="form-control-label">Name:</label>
+                  <input type="text" class="form-control" id="recipient-name" name="nombre">
+                </div>     
+                <div class="form-group">
+                  <label for="message-text" class="form-control-label">LastName:</label>
+                  <input type="text" class="form-control" id="recipient-name" name="apellido">
+                </div>  
+                <input type="submit" value="Submit" class="btn btn-outline-dark">
+              </form>
+            
+            </div>
           </div>
         </div>
       </div>
+    
     </div>
 
     <!-- Optional JavaScript -->
@@ -82,5 +92,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    
+    <script  src="js/indexnav.js"></script>
   </body>
 </html>
