--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,56 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-        <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
-        <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-        <link rel="stylesheet" href="css/homestyle.css">
-        <link rel="stylesheet" href="css/style.css">
-        <script src='js/jquery.min.js'></script>
-        <script src="js/jquery-ui.js"></script>
-        <script src="/node_modules/angular/angular.js"></script>
-        <script src="assets/js/skel.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
-        
-        <link rel="stylesheet" href="css/stylenav.css">
-        
-       <!-- <script>$( function(){$( "#draggable" ).draggable();});</script>-->
-       <meta charset="utf-8" />
-       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-       <link rel="stylesheet" href="assets/css/main.css" />
-       
-       
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+		<link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+		<link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+		<link rel="stylesheet" href="css/homestyle.css">
+		<link rel="stylesheet" href="css/style.css">
+		<script src='js/jquery.min.js'></script>
+		<script src="js/jquery-ui.js"></script>
+		<script src="/node_modules/angular/angular.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<link rel="stylesheet" href="css/stylenav.css">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
     </head>
-    <body onload="getLocation2()">
-       <!--<div class="divcerrar" id="divcerrar">
-            <a href="/logout" > <img class="imgx" src="img/X.png" width="50" height="50" align="right"></img></a>
-        </div>  
-        <div id="map" style="height:400px;">My map will go here</div>
-		<script>
-		    function getLocation2() {
-                if (navigator.geolocation) {
-                    navigator.geolocation.getCurrentPosition(myMap);
-                                            } 
-                else {alert("Error al cargar la localizacón")}
-            }
-			function myMap(position) {
-			 	var mapOptions = {
-        						  center: new google.maps.LatLng(position.coords.latitude, position.coords.longitude),
-        						  zoom: 18,
-                                  mapTypeId: google.maps.MapTypeId.HYBRID
-    							  }
-				var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-			}
-		</script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm21zoiREk_KsuLNeJ9VGTcUJgwL4DV3E&callback=myMap"></script>
-		-->
+    <body>
+
       <div class="navToggle"><div class="icon"></div></div>
         <div id="menu"><ul>
           <li>Home</li>
           <li>About</li>
           <li>Work</li>
-          <li><a href="/logout" >logout</a></li>
+          <li><a href="/logout" class="a-without-underline" >logout</a></li>
           </ul>
       </div>		
 
@@ -58,18 +32,8 @@
              <h1>{{{nombre}}} {{{apellido}}}</h1>
         </div>
         
-        <!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
-				<!--	<header id="header">
-						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
-							<nav>
-							<ul>
-								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
-							</ul>
-						</nav>
-					</header>-->
 
 				<!-- Main -->
 					<div id="main">
@@ -135,60 +99,15 @@
 						</article>
 					</div>
 
-				<!-- Footer -->
-				<!--	<footer id="footer" class="panel">
-						<div class="inner split">
-							<div>
-								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
-								</section>
-								<section>
-									<h2>Follow me on ...</h2>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									</ul>
-								</section>
-								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
-								</p>
-							</div>
-							<div>
-								<section>
-									<h2>Get in touch</h2>
-									<form method="post" action="#">
-										<div class="field half first">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="text" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send" class="special" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-							</div>
-						</div>
-					</footer>-->
+		
 
 			</div>
 
-		<!-- Scripts -->
+		
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 			<script  src="js/indexnav.js"></script>
         
