--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,9 +20,10 @@
           </ul>
       </div>
     
-      <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#Signin" data-whatever="@mdo">Sign In</button>
-      <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#Signup" data-whatever="@fat">Sign Up</button>
-      
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#Signin" data-whatever="@mdo">Sign In</button>
+        <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#Signup" data-whatever="@fat">Sign Up</button>
+      </div>
       <!--Login-->
       <div class="modal fade" id="Signin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -86,6 +87,22 @@
       </div>
     
     </div>
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
