--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -121,17 +121,17 @@
       <div class="modal-body">
 		<div id="main">
 			<article class="thumb">
-			<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+			<img src="images/thumbs/02.jpg" alt="" />
 			<h2>Ejercicios de Pecho</h2>
 			<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 			</article>
 			<article class="thumb">
-			<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
+			<img src="images/thumbs/03.jpg" alt="" />
 			<h2>Ejercicios de Piernas</h2>
 			<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 			</article>
 			<article class="thumb">
-			<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
+		<img src="images/thumbs/04.jpg" alt="" />
 			<h2>Ejercicios de Hombros</h2>
 			<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 			</article>
